umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_test_037.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 41
sum_formula: C28N5O6
graph6: fOACC_@A_?_??????????OT????????G??B??@K??GH???@???k????_???????????????????A?????????@??o??O?AO?????_????k?????@?_?????????G?
